some text moved to the Wiki
Building section moved to How to build RISCOSS platform tutorial
Deploying section moved to How to deploy RISCOSS platform tutorial